@@ -478,6 +478,9 @@
     <ClCompile Include="..\..\src\BatchedCharacterRenderer.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\res\bg16.c">
+      <Filter>res</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\res\ascii16.h">
@@ -571,6 +574,9 @@
       <Filter>res</Filter>
     </ClInclude>
     <ClInclude Include="..\..\res\dock_top.h">
+      <Filter>res</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\res\bg16.h">
       <Filter>res</Filter>
     </ClInclude>
   </ItemGroup>
